Update LoginView and API Call

--- a/Demo.csproj
+++ b/Demo.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+	  <Using Include="CommunityToolkit.Mvvm.ComponentModel" />
+	  <Using Include="CommunityToolkit.Mvvm.Input" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +21,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
   </ItemGroup>
 </Project>
