--- a/Demo.csproj
+++ b/Demo.csproj
@@ -12,6 +12,7 @@
     <AvaloniaResource Include="Assets\**" />
 	  <Using Include="CommunityToolkit.Mvvm.ComponentModel" />
 	  <Using Include="CommunityToolkit.Mvvm.Input" />
+	  <Using Include="System.Net.Http.Json"/>
   </ItemGroup>
 
   <ItemGroup>
