--- a/Demo.csproj
+++ b/Demo.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+    <None Remove="Assets\iot2.jpg" />
 	  <Using Include="CommunityToolkit.Mvvm.ComponentModel" />
 	  <Using Include="CommunityToolkit.Mvvm.Input" />
 	  <Using Include="System.Net.Http.Json" />
