--- a/Demo.csproj
+++ b/Demo.csproj
@@ -12,6 +12,7 @@
     <AvaloniaResource Include="Assets\**" />
     <None Remove="Assets\iot2.jpg" />
     <None Remove="Assets\logout.png" />
+    <None Remove="Assets\notification.png" />
     <None Remove="Assets\user.png" />
 	  <Using Include="CommunityToolkit.Mvvm.ComponentModel" />
 	  <Using Include="CommunityToolkit.Mvvm.Input" />
